<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Month Calendar Widget</string>
    <string name="app_version">1.5.0</string>
    <string name="widget_3x2">Month Calendar Widget 3x2</string>
    <string name="widget_4x3">Month Calendar Widget 4x3</string>
    <string name="desc_prev">Previous month</string>
    <string name="desc_next">Next month</string>
    <string name="desc_settings">Settings</string>

    <string name="app_settings">Month Calendar Widget Settings</string>   

    <string name="options">Options</string>
    <string name="title_FDW">First day of week</string>
    <string-array name="days_FDW">
		<item>Sunday</item>
		<item>Monday</item>
		<item>Saturday</item>
	 </string-array>
	 <string-array name="values_FDW">
		<item>1</item>
		<item>2</item>
		<item>7</item>		
	 </string-array>
	 <string name="title_show_days_prevnext">Days of previous/next month</string>
	 <string name="summary_show_days_prevnext">Show days of previous and next month dimmed</string>
	 <string name="title_stretch_widget">Stretch widget</string>
    <string name="summary_stretch_widget">Use all assigned space on the home screen</string>
    <string name="title_show_settingsbtn">Show Settings button</string>
    <string name="summary_show_settingsbtn">Show button to access Settings from widget</string>
    
    <string name="feedback">Feedback</string>
	 <string name="title_contactdev">Contact the developer</string>
	 <string name="summary_contactdev">Email your comments, feature suggestions and bug reports</string>
	 <string name="title_donate">Donate</string>
	 <string name="summary_donate">Support the developer\'s efforts with a donation</string>
    	 
    <string name="about_settings">About this app</string>
    <string name="title_website">Website</string>
	 <string name="summary_website">http://mobiledevjourney.blogspot.com</string>
    <string name="title_version">Version</string>
    
    <string name="instructions_intro">This calendar is a <b>home screen widget</b>, an Android view that you place on the home screen and use right there.</string>
    <string name="instr_sampleHS_description">A 3x2 widget ready to work</string>
    <string name="show_instructions">How to use it</string>
    <string name="instructions_shown">(Tap to dismiss)</string>
    <string name="instructions_towork_1"><b>1.</b> Press <b>Home</b> to go to the home screen. Choose where you want the widget</string>
    <string name="instructions_towork_2"><b>2.</b> Find <b>Month Calendar Widget</b> in the widget list (touch and hold screen, Widgets option in menu)</string>
    <string name="instructions_towork_3"><b>3.</b> Select one of two sizes (3x2 or 4x3)</string>
    <string name="instructions_towork_4"><b>4.</b> Adjust settings, press <b>Back</b> to exit</string>
    <string name="instructions_navigation">Use <b>arrows</b> for previous/next month. Tap <b>month/year</b> for current month.</string>
    <string name="instructions_morehelp">Need more help? Find it &lt;a href="http://mobiledevjourney.blogspot.com/2013/02/how-to-put-month-calendar-widget-on.html">here&lt;/a></string>
</resources>
