<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  	<PreferenceCategory android:title="@string/options">
  		<ListPreference
			android:key="first_day_week"
			android:title="@string/title_FDW"
			android:entries="@array/days_FDW" android:entryValues="@array/values_FDW"
			android:defaultValue="1" android:dialogTitle="@string/title_FDW" />
      <CheckBoxPreference
         android:key="show_days_prevnext"
         android:title="@string/title_show_days_prevnext"
         android:summary="@string/summary_show_days_prevnext"
         android:defaultValue="false"/>
  		<CheckBoxPreference
  			android:key="stretch_widget"
  			android:title="@string/title_stretch_widget"
         android:summary="@string/summary_stretch_widget"
         android:defaultValue="false"/>
      <CheckBoxPreference
         android:key="show_settingsbtn"
         android:title="@string/title_show_settingsbtn"
         android:summary="@string/summary_show_settingsbtn"
         android:defaultValue="false"/>
  	</PreferenceCategory>
  		
   <PreferenceCategory android:title="@string/feedback">
   	<Preference
   	    android:key="email_developer"
   	    android:title="@string/title_contactdev"
   	    android:summary="@string/summary_contactdev" />
   	<Preference
   	    android:key="donate"
   	    android:title="@string/title_donate"
   	    android:summary="@string/summary_donate" />
   </PreferenceCategory>
	
	<PreferenceCategory android:title="@string/about_settings">
   	<Preference
   	    android:key="website"
   	    android:title="@string/title_website"
   	    android:summary="@string/summary_website" />
	   <Preference
   	    android:title="@string/title_version"
   	    android:summary="@string/app_version" />
   </PreferenceCategory>

</PreferenceScreen>